--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>Training Track-TemplateBy-Bharath</title>
+    <title>Training Tech | Biznez</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -28,7 +28,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-easel" viewBox="0 0 16 16">
                 <path d="M8 0a.5.5 0 0 1 .473.337L9.046 2H14a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1h-1.85l1.323 3.837a.5.5 0 1 1-.946.326L11.092 11H8.5v3a.5.5 0 0 1-1 0v-3H4.908l-1.435 4.163a.5.5 0 1 1-.946-.326L3.85 11H2a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h4.954L7.527.337A.5.5 0 0 1 8 0zM2 3v7h12V3H2z"/>
-              </svg>&nbsp;Traning Track</a>
+              </svg>&nbsp;Traning Tech</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -102,7 +102,7 @@
               <div class="card"  >
                 <img src="images/t1.jpg" class="card-img-top" alt="..."  data-micron="squeeze">
                 <div class="card-body">
-                  <h5 class="card-title">Best Training</h5>
+                  <h5 class="card-title">Web Development</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sint impedit quisquam excepturi magnam velit? Distinctio nisi doloremque asperiores inventore, itaque perspiciatis nobis deleniti, explicabo ipsum possimus hic a deserunt!</p>
                 </div>
               </div>
@@ -111,7 +111,7 @@
               <div class="card" >
                 <img src="images/t2.jpg" class="card-img-top" alt="..."  data-micron="squeeze">
                 <div class="card-body">
-                  <h5 class="card-title">Release To Potential</h5>
+                  <h5 class="card-title">SEO</h5>
                   <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae, excepturi odio, natus molestiae eos delectus sunt inventore et tempore harum quisquam dignissimos exercitationem quasi unde vel eius adipisci nesciunt quod!tempora inventore est nulla.</p>
                 </div>
               </div>
@@ -120,7 +120,7 @@
               <div class="card" >
                 <img src="images/t1.jpg" class="card-img-top" alt="..."  data-micron="squeeze">
                 <div class="card-body">
-                  <h5 class="card-title">Professional Trainers</h5>
+                  <h5 class="card-title">Digital Marketing</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quis adipisci aspernatur repellendus cumque reiciendis debitis provident minima quasi commodi esse vel, fugit non quibusdam corporis tempora inventore est nulla tempora inventore est nulla.</p>
                 </div>
               </div>
@@ -143,7 +143,7 @@
                     <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est.</p>
                 </div>
                 <div class="author"><img class="rounded-circle" src="images/1.jpg">
-                    <h5 class="name">Johnson</h5>
+                    <h5 class="name">John</h5>
                     <p class="title">CEO of Company Inc.</p>
                 </div>
             </div>
@@ -184,14 +184,16 @@
         <div class="row mt-3">
         <div class="col-md-4">
             <h5>Address</h5>
-            <p>203 Ring road View, Mysore</p>
+            <p>#1011/1, 2nd main,
+                4th cross, Vidyaranyapuram
+                Mysore - 570008 </p>
         </div>
         <div class="col-md-4">
             <h5>Phone</h5>
-            <p>+91-9988776655</p>
+            <p>+91 8880555353</p>
         </div>
         <div class="col-md-4"><h5>Email Address</h5>
-            <p>test@training.com</p></div>
+            <p>info@trainingtech.com</p></div>
         </div>
     
     <div class="col-md-8 mt-3">
@@ -222,7 +224,7 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-4">
-                <h4>Company</h4>
+                <h4>Training Tech</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolore fugit perferendis est
                     repudiandae esse quos labore iure. Voluptates dolores et natus maiores repellendus molestiae amet
                     minima praesentium nisi iusto!</p>
@@ -247,7 +249,7 @@
   
     </div>
     <div class="ft">
-        <p class="text-center">CopyRights@2021.All Rights Reserved.TemplateBy-Bharath</p>
+        <p class="text-center">CopyRights@2021.All Rights Reserved.WebsiteBy Biznez</p>
     </div>
 </section>
 
